Install SystemVerilog bundle as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/vim-indent-object"]
 	path = bundle/vim-indent-object
 	url = https://github.com/michaeljsmith/vim-indent-object
+[submodule "bundle/SystemVerilog"]
+	path = bundle/SystemVerilog
+	url = https://github.com/WeiChungWu/vim-SystemVerilog.git
