Install Align bundle as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/SystemVerilog"]
 	path = bundle/SystemVerilog
 	url = https://github.com/WeiChungWu/vim-SystemVerilog.git
+[submodule "bundle/Align"]
+	path = bundle/Align
+	url = https://github.com/vim-scripts/Align.git
